[package]
name = "yrs-libp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = "0.18.1"
libp2p = { version = "0.53", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }